--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -105,18 +105,27 @@ section {
 
 h1 {
 	position: absolute;
-	font-family: $roboto;
-	font-size: 10em;
+	font-family: $raleway;
+	font-size: 6em;
+	color: rgba(black, 0.3);
 }
 
 .textbox {
 	position: absolute;
 	width: 35vw;
 	height: (35vw * 9) / 16;
-	background-color: blue;
 	left: 10%;
 	top: 50%;
 	transform: translate(0, -50%);
+}
+
+p{
+	position: absolute;
+	bottom: 0;
+	font-size: 1.25em;
+	font-family: $roboto;
+	color: black;
+
 }
 
 
