Changed h1 and p to a "softer black" #2e2e2e because it looks less harsh against stark white.

--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -107,7 +107,7 @@ h1 {
 	position: absolute;
 	font-family: $raleway;
 	font-size: 7em;
-	color: rgba(black, 0.3);
+	color: #2e2e2e;
 }
 
 .textbox {
@@ -124,8 +124,7 @@ p{
 	bottom: 0;
 	font-size: 1.25em;
 	font-family: $roboto;
-	color: black;
-
+	color: #2e2e2e;
 }
 
 
