Got scss to compile to css using just sass and not compass. Am also using normalize.css... which seems to have really messed up the fonts.

--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -1,5 +1,5 @@
 // Imports
-@import "compass/reset";
+@import "normalize";
 
 // Colors
 $gray: #CFCFCF;
@@ -288,7 +288,7 @@ a {
 }
 
 #edit {
-	background-color: red;
+	background-color: red; 
 	color: $dark-teal;
 }
 
