--- a/style/stylesheets/style.css
+++ b/style/stylesheets/style.css
@@ -407,6 +407,7 @@ h1 {
   font-family: "Raleway", sans-serif;
   font-size: 7em;
   color: #2e2e2e;
+  margin: 0;
 }
 
 .textbox {
@@ -416,7 +417,6 @@ h1 {
   left: 10%;
   top: 50%;
   transform: translate(0, -50%);
-  background-color: red;
 }
 
 p {
